fix z-index

--- a/src/sass/sections/professionals.scss
+++ b/src/sass/sections/professionals.scss
@@ -16,7 +16,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: -1;
+    z-index: 1;
     width: 100%;
     max-width: 780px;
     height: 100%;
